ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/LoanDisbursementDetails__c.object-meta.xml
<CustomObject>
    <label>LoanDisbursementDetails</label>
    <nameField>
        <label>LoanDisbursementDetails  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoanDisbursementDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>