ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Adjustment_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount1__c</fullName>
    <label>Adjustment Amount1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>