ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Adjustment_Amount3__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount3__c</fullName>
    <label>Adjustment Amount3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>