ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Adjustment_Deal_Number1__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Deal_Number1__c</fullName>
    <label>Adjustment Deal Number1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>