ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Balance_Transfer_Amount_in_Rs__c.field-meta.xml
<CustomField>
    <fullName>Balance_Transfer_Amount_in_Rs__c</fullName>
    <label>Balance Transfer Amount (in Rs.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>