ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Bank_Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Ben_Code__c</fullName>
    <label>Bank Ben Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>