ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_1__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_1__c</fullName>
    <label>Beneficiary 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>