ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_1_Amount__c</fullName>
    <label>Beneficiary 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>