ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_2__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_2__c</fullName>
    <label>Beneficiary 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>