ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_3__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_3__c</fullName>
    <label>Beneficiary 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>