ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_3_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_3_Account_Number__c</fullName>
    <label>Beneficiary 3 Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>