ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Beneficiary_3_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_3_Type__c</fullName>
    <label>Beneficiary 3 Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>