ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_Address__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>