ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_Mother_DOB__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Mother_DOB__c</fullName>
    <label>Mother DOB</label>
    <type>Date</type>
</CustomField>