ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FATHER</fullName>
            </value>
            <value>
                <fullName>BROTHER</fullName>
            </value>
            <value>
                <fullName>SISTER</fullName>
            </value>
            <value>
                <fullName>AUNTY</fullName>
            </value>
            <value>
                <fullName>BROTHER - IN LAW</fullName>
            </value>
            <value>
                <fullName>GRANDDAUGHTER</fullName>
            </value>
            <value>
                <fullName>GRANDSON</fullName>
            </value>
            <value>
                <fullName>HUSBAND</fullName>
            </value>
            <value>
                <fullName>NEPHEW</fullName>
            </value>
            <value>
                <fullName>NIECE</fullName>
            </value>
            <value>
                <fullName>SISTER - IN LAW</fullName>
            </value>
            <value>
                <fullName>UNCLE</fullName>
            </value>
            <value>
                <fullName>WIFE</fullName>
            </value>
            <value>
                <fullName>SON</fullName>
            </value>
            <value>
                <fullName>PATERNAL GRANDFATHER</fullName>
            </value>
            <value>
                <fullName>PATERNAL GRANDMOTHER</fullName>
            </value>
            <value>
                <fullName>DAUGHTER - INCLUDING STEP DAUGHTER</fullName>
            </value>
            <value>
                <fullName>MOTHER -INCLUDING STEP MOTHER</fullName>
            </value>
            <value>
                <fullName>APPLICANT</fullName>
                <isActive>false</isActive>
                <label>APPLICANT</label>
            </value>
            <value>
                <fullName>ASSOCIATION</fullName>
                <isActive>false</isActive>
                <label>ASSOCIATION</label>
            </value>
            <value>
                <fullName>ASSOCIATION FOR PROFIT</fullName>
                <isActive>false</isActive>
                <label>ASSOCIATION FOR PROFIT</label>
            </value>
            <value>
                <fullName>BROTHER - INCLUDING STEP BROTHER</fullName>
                <isActive>false</isActive>
                <label>BROTHER - INCLUDING STEP BROTHER</label>
            </value>
            <value>
                <fullName>COUSIN BROTHER</fullName>
                <isActive>false</isActive>
                <label>COUSIN BROTHER</label>
            </value>
            <value>
                <fullName>COUSIN SISTER</fullName>
                <isActive>false</isActive>
                <label>COUSIN SISTER</label>
            </value>
            <value>
                <fullName>DIRECTOR</fullName>
                <isActive>false</isActive>
                <label>DIRECTOR</label>
            </value>
            <value>
                <fullName>FATHER - IN LAW</fullName>
                <isActive>false</isActive>
                <label>FATHER - IN LAW</label>
            </value>
            <value>
                <fullName>HUSBAND OF GRANDDAUGHTER</fullName>
                <isActive>false</isActive>
                <label>HUSBAND OF GRANDDAUGHTER</label>
            </value>
            <value>
                <fullName>HUSBAND OF SISTER</fullName>
                <isActive>false</isActive>
                <label>HUSBAND OF SISTER</label>
            </value>
            <value>
                <fullName>HUSBAND OF SISTER - IN LAW</fullName>
                <isActive>false</isActive>
                <label>HUSBAND OF SISTER - IN LAW</label>
            </value>
            <value>
                <fullName>MANAGING DIRECTOR</fullName>
                <isActive>false</isActive>
                <label>MANAGING DIRECTOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>