ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_Spouse_DOB__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Spouse_DOB__c</fullName>
    <label>Spouse DOB</label>
    <type>Date</type>
</CustomField>