ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_Spouse_Gender__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Spouse_Gender__c</fullName>
    <label>Spouse Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>