ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_X3rd_Child_Gender__c.field-meta.xml
<CustomField>
    <fullName>Borrower_X3rd_Child_Gender__c</fullName>
    <label>3rd Child Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>