ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Borrower_X3rd_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_X3rd_Child_Name__c</fullName>
    <label>3rd Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>