ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Business_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Business_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LoanDisbursementDetails1</relationshipName>
    <type>Lookup</type>
</CustomField>