ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Chassis_no__c.field-meta.xml
<CustomField>
    <fullName>Chassis_no__c</fullName>
    <label>Chassis no.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>