ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Co_borrower_name__c.field-meta.xml
<CustomField>
    <fullName>Co_borrower_name__c</fullName>
    <label>Co-borrower name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>