ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/CoBorrower_Father_DOB__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Father_DOB__c</fullName>
    <label>Father DOB</label>
    <type>Date</type>
</CustomField>