ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/CoBorrower_X1st_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_X1st_Child_DOB__c</fullName>
    <label>1st Child DOB</label>
    <type>Date</type>
</CustomField>