ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/CoBorrower_X2nd_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_X2nd_Child_DOB__c</fullName>
    <label>2nd Child DOB</label>
    <type>Date</type>
</CustomField>