ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/CoBorrower_X2nd_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_X2nd_Child_Name__c</fullName>
    <label>2nd Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>