ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Collection_Executive__c.field-meta.xml
<CustomField>
    <fullName>Collection_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Executive</label>
    <referenceTo>TBM_DL_Master__c</referenceTo>
    <relationshipLabel>LoanDisbursementDetails</relationshipLabel>
    <relationshipName>LoanDisbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>