ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Current_vehicle_owner__c.field-meta.xml
<CustomField>
    <fullName>Current_vehicle_owner__c</fullName>
    <label>Current vehicle owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>