ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Customer_code2__c.field-meta.xml
<CustomField>
    <fullName>Customer_code2__c</fullName>
    <label>Customer code2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>