ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Customer_code3__c.field-meta.xml
<CustomField>
    <fullName>Customer_code3__c</fullName>
    <label>Customer code3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>