ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Customer_name1__c.field-meta.xml
<CustomField>
    <fullName>Customer_name1__c</fullName>
    <label>Customer name1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>