ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Customer_name2__c.field-meta.xml
<CustomField>
    <fullName>Customer_name2__c</fullName>
    <label>Customer name2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>