ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Dealer_Payment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Payment__c</fullName>
    <label>Dealer Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>