ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Do_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Do_Issuance__c</fullName>
    <label>Do Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Along_with_Payment</fullName>
                <label>Along with Payment</label>
            </value>
            <value>
                <fullName>Already_Issued</fullName>
                <label>Already Issued</label>
            </value>
            <value>
                <fullName>Separate</fullName>
            </value>
            <value>
                <fullName>Pre-delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>