ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Do_Issuance_Mode__c.field-meta.xml
<CustomField>
    <fullName>Do_Issuance_Mode__c</fullName>
    <label>Do Issuance Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
            <value>
                <fullName>Along_with_payment</fullName>
                <label>Along with payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>