ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Do_To_be_authorized_by__c.field-meta.xml
<CustomField>
    <fullName>Do_To_be_authorized_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Do To be authorized by</label>
    <referenceTo>Benefi__c</referenceTo>
    <relationshipLabel>LoanDisbursementDetails</relationshipLabel>
    <relationshipName>LoanDisbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>