ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/DSA_Name__c.field-meta.xml
<CustomField>
    <fullName>DSA_Name__c</fullName>
    <label>DSA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>