ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Engine_no__c.field-meta.xml
<CustomField>
    <fullName>Engine_no__c</fullName>
    <label>Engine no.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>