ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/FI_Done_By__c.field-meta.xml
<CustomField>
    <fullName>FI_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FI Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LoanDisbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>