ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/FourthYr_IDV__c.field-meta.xml
<CustomField>
    <fullName>FourthYr_IDV__c</fullName>
    <label>FourthYr_IDV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>