ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/FourthYr_Third_Party_Premium__c.field-meta.xml
<CustomField>
    <fullName>FourthYr_Third_Party_Premium__c</fullName>
    <label>FourthYr_Third Party Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>